examples/errors/undeclared_var.syntax
Program
  ProgramDeclaration
    ClassName: Main
    ProgramArguments
      Literals
        Literal: 1.100000
        Literal: 1.200000
  ClassDeclarations
    ClassDeclaration
      ClassName: Main
      ClassBody
        MemberDeclarations
          MemberDeclaration
            ConstructorDeclaration
              Body
                BodyDeclarations
                  BodyDeclaration
                    VariableDeclaration
                      CompoundExpression: Integer
                      VariableName: a
                  BodyDeclaration
                    Assignment
                      CompoundExpression: Integer
                        Arguments
                          Expressions
                            Primary: 5
                      VariableName: a
                  BodyDeclaration
                    Assignment
                      CompoundExpression: a
                        CompoundExpression: Plus
                          Arguments
                            Expressions
                              CompoundExpression: b
                      VariableName: c
